[project]
name = "jbrc-scraper"
version = "0.1.0"
description = "Scrape JBRC battery collection points and export as CSV"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.0",
  "selenium>=4.0",
  "webdriver-manager>=4.0",
]

[project.scripts]
jbrc-scraper = "jbrc_scraper.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/jbrc_scraper"]
